--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -13,9 +13,9 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
         with:
-          ref: main
+          ref: ${{ github.event.repository.default_branch }}
 
       - name: Update Changelog
         uses: stefanzweifel/changelog-updater-action@v1
@@ -24,8 +24,8 @@ jobs:
           release-notes: ${{ github.event.release.body }}
 
       - name: Commit updated CHANGELOG
-        uses: stefanzweifel/git-auto-commit-action@v5
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          branch: main
+          branch: ${{ github.event.repository.default_branch }}
           commit_message: Update CHANGELOG
           file_pattern: CHANGELOG.md
