--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "illuminate/contracts": "^10.0",
         "laravel/prompts": "^0.1.13",
         "openai-php/client": "^0.8.0",
+        "openai-php/laravel": "^0.8.0",
         "probots-io/pinecone-php": "^0.0.3",
         "spatie/laravel-package-tools": "^1.14.0"
     },
