--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "illuminate/contracts": "^10.0",
+        "php": "^8.2",
+        "illuminate/contracts": "^10.0|^11.0",
         "laravel/prompts": "^0.1.13",
         "openai-php/client": "^0.8.0",
         "openai-php/laravel": "^0.8.0",
